feat: Add qiniu token.
