# internal/api/comment.go
@@ -1,6 +1,8 @@
 package api
 
 import (
+	"time"
+
 	"github.com/IRONICBo/QiYin_BE/internal/common"
 	"github.com/IRONICBo/QiYin_BE/internal/common/response"
 	"github.com/IRONICBo/QiYin_BE/internal/dal/dao"
@@ -9,7 +11,6 @@ import (
 	"github.com/IRONICBo/QiYin_BE/internal/utils"
 	"github.com/IRONICBo/QiYin_BE/pkg/log"
 	"github.com/gin-gonic/gin"
-	"time"
 )
 
 // CommentList
@@ -17,6 +18,7 @@ import (
 // @Summary CommentList
 // @Description Test API
 // @Produce application/json
+// @Param videoId query string true "videoId"
 // @Success 200 {object}  response.Response{msg=string} "Success"
 // @Router /api/v1/comment/list [get].
 func CommentList(c *gin.Context) {
@@ -24,7 +26,6 @@ func CommentList(c *gin.Context) {
 
 	svc := service.NewCommentService(c)
 	u, err := svc.GetList(videoId)
-
 	if err != nil {
 		log.Debug("Get comment list error", err)
 		response.FailWithCode(common.ERROR, c)
@@ -39,6 +40,7 @@ func CommentList(c *gin.Context) {
 // @Summary CommentAction
 // @Description Test API
 // @Produce application/json
+// @Param data body requestparams.CommentDelParams true "CommentDelParams"
 // @Success 200 {object}  response.Response{msg=string} "Success"
 // @Router /api/v1/comment/delete [post].
 func CommentDelete(c *gin.Context) {
@@ -71,6 +73,7 @@ func CommentDelete(c *gin.Context) {
 // @Summary CommentAdd
 // @Description Test API
 // @Produce application/json
+// @Param data body requestparams.CommentAddParams true "CommentAddParams"
 // @Success 200 {object}  response.Response{msg=string} "Success"
 // @Router /api/v1/comment/add [post].
 func CommentAdd(c *gin.Context) {
@@ -87,18 +90,17 @@ func CommentAdd(c *gin.Context) {
 		return
 	}
 
-	//数据准备
+	// 数据准备
 	commentInfo := dao.Comment{
-		VideoId:     params.VideoId,     //评论视频id传入
-		UserId:      userId,             //评论用户id传入
-		CommentText: params.CommentText, //评论内容传入
-		Cancel:      utils.ValidComment, //评论状态，0，有效
-		CreateDate:  time.Now(),         //评论时间
+		VideoId:     params.VideoId,     // 评论视频id传入
+		UserId:      userId,             // 评论用户id传入
+		CommentText: params.CommentText, // 评论内容传入
+		Cancel:      utils.ValidComment, // 评论状态，0，有效
+		CreateDate:  time.Now(),         // 评论时间
 	}
 
 	svc := service.NewCommentService(c)
 	commentData, err := svc.CommentAdd(commentInfo)
-
 	if err != nil {
 		log.Debug("Favorite operation error", err)
 		response.FailWithCode(common.ERROR, c)
